k8s/apps/maildev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maildev
  namespace: cwx
spec:
  ports:
    - name: web
      port: 80
      targetPort: 1080
    - name: smtp
      port: 1025
      targetPort: 1025
  selector:
    app: maildev
